added button and header

--- a/document.html
+++ b/document.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Click on the button to make 100 buttons</h1>
+    </header>
+    <button id="btn">ClICK ME</button>
     <script src="app.js"></script>
 </body>
 </html>
