centered button and added section

--- a/document.html
+++ b/document.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="app.css">
     <meta charset="UTF-8">
@@ -7,11 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <h1>Click on the button to make 100 buttons</h1>
     </header>
-    <button id="btn">ClICK ME</button>
+    <section>
+        <button id="btn">ClICK ME</button>
+    </section>
     <script src="app.js"></script>
 </body>
+
 </html>
