added another section in html and user prompt in js

--- a/document.html
+++ b/document.html
@@ -16,6 +16,9 @@
     <section>
         <button id="btn">ClICK ME</button>
     </section>
+    <section id="newSec">
+
+    </section>
     <script src="app.js"></script>
 </body>
 
