make buttons random color

--- a/document.html
+++ b/document.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Click on the button to make 100 buttons</h1>
+        <h1>Click on the button to make buttons</h1>
     </header>
     <section>
         <button id="btn">ClICK ME</button>
