--- a/document.html
+++ b/document.html
@@ -13,11 +13,15 @@
     <header>
         <h1>Click on the button to make buttons</h1>
     </header>
+    <h2>Keep clicking to double the amount of buttons!</h2>
     <section>
         <button id="btn">ClICK ME</button>
     </section>
     <section id="newSec">
 
+    </section>
+    <section id="lastBtn">
+        <button id="reset">Reset</button>
     </section>
     <script src="app.js"></script>
 </body>
