added h3 and number of buttons counter

--- a/document.html
+++ b/document.html
@@ -23,6 +23,7 @@
     <section id="lastBtn">
         <button id="reset">Reset</button>
     </section>
+    <h3>Number of buttons: </h3>
     <script src="app.js"></script>
 </body>
 
